--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,10 +3,18 @@ nav {
  justify-content: space-around;
  align-items: center;
  background-color: #333;
+ height: 70px;
 }
 
-h1 {
+h1 > a {
  color: white;
+ font-size: 2rem;
+ margin: 0;
+ text-decoration: none;
+}
+
+h1 > a:hover {
+ opacity: 75%;
 }
 
 .nav-links {
