--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,15 @@
+* {
+ color: black;
+}
+
 nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
- background-color: #333;
  height: 70px;
 }
 
 h1 > a {
- color: white;
  font-size: 2rem;
  margin: 0;
  text-decoration: none;
@@ -26,7 +28,6 @@ h1 > a:hover {
 
 .nav-links li > a {
  text-decoration: none;
- color: white;
  font-size: 1.2em;
  margin: 0 15px;
 }
