--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
 body {
- font-family: 'Roboto', sans-serif;
- /* background-color: #ffe6f0; */
+ /* font-family: 'Roboto', sans-serif; */
+ font-family: 'Noto Sans JP', sans-serif;
 }
