--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,4 @@
-* {
- color: black;
-}
-
-nav {
+.nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
@@ -11,6 +7,7 @@ nav {
 }
 
 h1 > a {
+ color: black;
  font-size: 2rem;
  margin: 0;
  text-decoration: none;
@@ -28,11 +25,13 @@ h1 > a:hover {
 }
 
 .navLinks li > a {
+ color: black;
  text-decoration: none;
  font-size: 1.2em;
  margin: 0 15px;
 }
 
 .navLinks li > a:hover {
- opacity: 75%;
+ color: rgb(255, 185, 204);
+ text-decoration: underline;
 }
