--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -2,11 +2,28 @@
  margin: 20px 40px;
 }
 
+.sectionName {
+ transition: 0.5s;
+}
+
+.sectionName:hover {
+ cursor: pointer;
+ opacity: 50%;
+ transform: translateY(-5px);
+ text-decoration: underline;
+}
+
+
 .entryContainer {
  margin-bottom: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
+ background-color: whitesmoke;
+}
+
+.entryContent {
+ margin-left: 10px;
 }
 
 .entryLinks {
