--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 body {
- /* font-family: 'Roboto', sans-serif; */
- font-family: 'Noto Sans JP', sans-serif;
+ font-family: 'Roboto Mono', monospace;
 }
