add all thumbnials to current entries

--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -2,6 +2,12 @@
  margin: 20px 40px;
 }
 
+.sectionContainer {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
 .sectionName {
  transition: 0.5s;
 }
