--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -1,5 +1,9 @@
 .page {
  margin: 20px 40px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: space-around;
 }
 
 .sectionContainer {
@@ -13,9 +17,19 @@
 }
 
 .sectionName:hover {
- cursor: pointer;
- color: rgb(255, 185, 204);
- text-decoration: underline;
+  cursor: pointer;
+  color: rgb(255, 185, 204);
+  text-decoration: underline;
+}
+
+.openSectionName {
+  text-decoration: underline;
+  transition: 0.5s;
+}
+ 
+.openSectionName:hover {
+  cursor: pointer;
+  color: rgb(255, 185, 204);
 }
 
 
@@ -24,6 +38,7 @@
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
+ width: 700px;
  padding: 20px;
  background-color: whitesmoke;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
