--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -8,7 +8,7 @@
 .contactContainer {
   display: flex;
   justify-content: center;
-  /* border: 1px solid #333; */
+  border: 1px solid #333;
   width: 300px;    
   padding: 20px;
 }
@@ -38,4 +38,9 @@
 .entry a {
   text-decoration: none;
   color: black;
+}
+
+.entry a:hover {
+  text-decoration: underline;
+  color: cornflowerblue;
 }
