--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -4,3 +4,31 @@
   align-items: center;
   margin: 40px 40px;
 }
+
+.imagesContainer {
+  display: flex;
+}
+
+.imageCard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 320px;
+  height: 180px;
+  padding: 5px 5px;
+  background-color: whitesmoke;
+}
+
+.imageCardContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: inherit;
+  height: inherit;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.imageCardContent > img {
+  width: inherit;
+  height: inherit;
+}
